--- a/teams/templates/teams/home.html
+++ b/teams/templates/teams/home.html
@@ -7,19 +7,24 @@ CyberHunt
 {% block content %}
 
 <div class="text-center container">
-    <form class="form-signin pl-5 pt-5 pr-5">
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" value="remember-me"> Remember me
-            </label>
+    <h1 class="pt-5">C Y B E R H U N T</h1>
+    <div class="row pt-5">
+        <div class="col-2"></div>
+        <div class="col-8">
+            <a href="{% url 'login' %}">
+                <button class="btn btn-info btn-lg">
+                    Login
+                </button>
+            </a>
+            <br>
+            <br>
+            <a href="{% url 'register' %}">
+                <button class="btn btn-info btn-lg">
+                    Register
+                </button>
+            </a>
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-        <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
-    </form>
+        <div class="col-2"></div>
+    </div>
 </div>
 {% endblock %}
