--- a/teams/templates/teams/login.html
+++ b/teams/templates/teams/login.html
@@ -1,29 +1,46 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} 
 
-{% block title %}
-Login
-{% endblock %}
+{% block title %} Login {% endblock %} 
 
 {% block content %}
 
 <div class="text-center container">
-    <div class="row pt-3">
-        <div class="col-2"></div>
-        <div class="col-8">
-            <form class="form-signin pl-5 pt-5 pr-5" action="{% url 'login' %}" method="POST">
-                {% csrf_token %}
-                <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-                <label for="teamname" class="sr-only">Team Name</label>
-                <input type="text" id="teamname" name="teamname" class="form-control"
-                    placeholder="Enter the name of your team" required autofocus>
-                <label for="password" class="sr-only">Password</label>
-                <input type="password" id="password" name="password" class="form-control" placeholder="Enter Password"
-                    required>
-                <button class="btn btn-lg btn-primary" type="submit">Sign in</button>
-                <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
-            </form>
-        </div>
-        <div class="col-2"></div>
+  <div class="row pt-3">
+    <div class="col-3"></div>
+    <div class="col-6">
+      <form
+        class="form-signin pl-5 pt-5 pr-5"
+        action="{% url 'login' %}"
+        method="POST"
+      >
+        {% csrf_token %}
+        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+        <label for="teamname" class="sr-only">Team Name</label>
+        <input
+          type="text"
+          id="teamname"
+          name="teamname"
+          class="form-control"
+          placeholder="Enter the name of your team"
+          required
+          autofocus
+        />
+        <br />
+        <label for="password" class="sr-only">Password</label>
+        <input
+          type="password"
+          id="password"
+          name="password"
+          class="form-control"
+          placeholder="Enter Password"
+          required
+        />
+        <br />
+        <button class="btn btn-lg btn-primary" type="submit">Sign in</button>
+        <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
+      </form>
     </div>
+    <div class="col-2"></div>
+  </div>
 </div>
 {% endblock %}
