added questions templates

--- a/questions/templates/questions/navbar.html
+++ b/questions/templates/questions/navbar.html
@@ -1,28 +1,30 @@
 {% load staticfiles %}
 
-<!-- <nav class="navbar navbar-light bg-light justify-content-between">
-    <a class="navbar-brand">{{ teamname }} ({{ score }})</a>
-    <div style="float: right">
-        <a href="/leaderboards" target="_blank">Leaderboards</a>&nbsp;
-        <a href="/logout">Logout</a>
-    </div>
-</nav> -->
-<link href="{% static 'css/styles.css' %}" rel="stylesheet">
-
-
 <!-- Sidebar -->
 <div class="bg-light border-right" id="sidebar-wrapper">
-    <div class="sidebar-heading">{{ teamname }} ({{ score }}) </div>
+    <div class="sidebar-heading">
+        <h4>{{ teamname }} ({{ score }}) </h5>
+    </div>
     <div class="list-group list-group-flush">
         {% for question in all_questions %}
         <a 
-            href="{% url 'question' {{ question.id }}" 
+            href="{% url 'question' question.id %}" 
             class="list-group-item list-group-item-action bg-light">
+
+            <i class="fas fa-check-circle" style="color: green"></i>&nbsp;
             {{ question.name }}
 
             <div style="float: right;">{{ question.points }}</div>
         </a>
         {% endfor %}
+        <a 
+            href="{% url 'question' 1" 
+            class="list-group-item list-group-item-action bg-light">
+
+            <i class="fas fa-question-circle" style="color: blue"></i>&nbsp;
+            Dummy
+
+            <div style="float: right;">10</div>
+        </a>
     </div>
 </div>
-<!-- /#sidebar-wrapper -->
