--- a/questions/templates/questions/question.html
+++ b/questions/templates/questions/question.html
@@ -1,30 +1,33 @@
 {% extends 'base.html' %}
 
 {% block title %}
-{{ question.name }}
+    {{ this_question.name }}
 {% endblock %}
+
 
 {% block content %}
 
-<div class="d-flex" id="wrapper">
+    <div class="d-flex" id="wrapper">
 
-    {% include 'questions/navbar.html' %}
+        {% include 'questions/navbar.html' %}
 
-    <div id="page-content-wrapper">
+        <div id="page-content-wrapper">
 
-        {% include 'questions/topbar.html' %}
-  
-        <div class="container-fluid">
-            <br>
-            <p>{{ question.body }}</p>
+            {% include 'questions/topbar.html' %}
+
+            <div class="container-fluid">
+                <br>
+                <p>{{ this_question.body }}</p>
+
+                {% include 'questions/images.html' %}
+
+                <br><br>
+
+                {% include 'questions/files.html' %}
+            </div>
+
         </div>
-
-        {% include 'questions/images.html' %}
-
-        {% include 'questions/files.html' %}
-
+        <!-- /#page-content-wrapper -->
     </div>
-    <!-- /#page-content-wrapper -->  
-</div>
 
 {% endblock %}
