--- a/questions/templates/questions/topbar.html
+++ b/questions/templates/questions/topbar.html
@@ -1,5 +1,5 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-    <h2>{{ question.name }}</h2>
+    <h2>{{ this_question.name }}</h2>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
@@ -7,7 +7,7 @@
                 <a class="nav-link">Time Left: </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'leaderboards' %}">Leaderboards </a>
+                <a class="nav-link" href="{% url 'leaderboard' %}">Leaderboard </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'logout' %}">Logout </a>
