--- a/questions/templates/questions/images.html
+++ b/questions/templates/questions/images.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 
 {% for image in images %}
-    <img src="{{ image.image.url }}" class="rounded float-left img-thumbnail" width="300">
+    <img src="{{ image.image.url }}" class="rounded float-left img-thumbnail m-2" width="300">
 {% endfor %}
 
 <div style="clear: both;"></div>
