--- a/questions/templates/questions/question.html
+++ b/questions/templates/questions/question.html
@@ -17,13 +17,20 @@
 
             <div class="container-fluid">
                 <br>
-                <p>{{ this_question.body }}</p>
+                <p class="p-2">{{ this_question.body }}</p>
 
                 {% include 'questions/images.html' %}
 
-                <br><br>
+                <br>
 
                 {% include 'questions/files.html' %}
+
+                <div class="input-group mb-3">
+                    <div class="m-2">
+                        <input type="text" class="form-control" placeholder="Enter your answer here" size="50">
+                    </div>
+                    <button class="btn btn-danger btn-lg">Submit</button>
+                </div>
             </div>
 
         </div>
