--- a/questions/templates/questions/topbar.html
+++ b/questions/templates/questions/topbar.html
@@ -7,7 +7,7 @@
                 <a class="nav-link">Time Left: </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'leaderboard' %}">Leaderboard </a>
+                <a class="nav-link" href="{% url 'leaderboard' %}" target="_blank">Leaderboard </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'logout' %}">Logout </a>
